feat: now using ZCG by default and recommending using it